// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup /> errors when a non-button is passed 1`] = `
"Warning: Failed prop type: \`ButtonGroup.children\` only accepts components matching the regular expression /(?:Tooltip|Permission|Trebuchet|ERF)|(?:Buttons?|Links?)$/
    in ButtonGroup"
`;

exports[`<ButtonGroup /> handles buttons that return falsy values 1`] = `
<div
  className="f17ngz76"
>
  <div
    className="f13xp2de"
    key=".1"
  >
    <Button>
      Two
    </Button>
  </div>
</div>
`;

exports[`<ButtonGroup /> handles components that return a falsy value 1`] = `
<div
  className="f17ngz76"
>
  <div
    className="f13xp2de"
    key=".0"
  >
    <FakeButton />
  </div>
</div>
`;

exports[`<ButtonGroup /> renders a single button 1`] = `
<div
  className="fddsvlq"
>
  <div
    className="fm82xdt"
    key=".0"
  >
    <Button>
      One
    </Button>
  </div>
</div>
`;

exports[`<ButtonGroup /> renders buttons 1`] = `
<div
  className="fddsvlq"
>
  <div
    className="fm82xdt"
    key=".0"
  >
    <Button>
      One
    </Button>
  </div>
  <div
    className="fm82xdt"
    key=".1"
  >
    <Button>
      Two
    </Button>
  </div>
  <div
    className="fm82xdt"
    key=".2"
  >
    <Button>
      Three
    </Button>
  </div>
</div>
`;

exports[`<ButtonGroup /> renders buttons stacked 1`] = `
<div
  className="f17ngz76"
>
  <div
    className="f13xp2de"
    key=".0"
  >
    <Button>
      One
    </Button>
  </div>
  <div
    className="f13xp2de"
    key=".1"
  >
    <Button>
      Two
    </Button>
  </div>
  <div
    className="f13xp2de"
    key=".2"
  >
    <Button>
      Three
    </Button>
  </div>
</div>
`;
